Co-authored-by: PraveenKanth1802 <PraveenKanth1802@users.noreply.github.com>

--- a/firebase_project/public/index.html
+++ b/firebase_project/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Test Dummy</title>
+    <title>Tech Talk - Firebase Web</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -12,19 +12,19 @@
 
   <body>
     <div class="container">
-      <h1 id="tempTable"></h1>
-      <p>Temperature Data</p>
-      <table class="table table-striped" id="tab1">
+      <h1 id="bigTextEvaluationStudents"></h1>
+      <p>Students Firebase 101:</p>
+      <table class="table table-striped" id="table1">
     		<thead>
     			<tr>
-    				<th>Time</th>
-    				<th>Temperature</th>
+    				<th>Name</th>
+    				<th>Grade</th>
     			</tr>
     		</thead>
     		<tbody>
     		</body>
     	</table>
     </div>
-    <script src="app.js"></script>
+    <script src="./app.js" type="module"></script>
   </body>
 </html>
