--- a/finalProject/public/index.html
+++ b/finalProject/public/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/css/datepicker.min.css"/>
     <!--                  Custom CSS                    -->
+    <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="./style.css" />
 
     <title>RMK Esp Sensor</title>
@@ -32,38 +33,39 @@
       </header>
 
       <!--                    Nav Bar                         -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div
-            class="collapse navbar-collapse d-flex justify-content-around"
-            id="navbarNavAltMarkup"
-            style="transition: 1s"
-          >
-            <div class="navbar-nav" id="navbarNavAltMarkup">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="./index.html"
-                >Home</a
-              >
-              <a class="nav-link active" href="./humidity.html">Pollution Monitor</a>
-              <a class="nav-link active" href="#">Monthly report</a>
-              <a class="nav-link active" href="#">Contact us</a>
-            </div>
-          </div>
-        </div>
-      </nav>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-2">
+      <button class="navbar-toggler" id="nav-toggle-button" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbar-menu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar-menu">
+        <ul class="navbar-nav text-center ms-auto" id="nav-ul">
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html" id="nav-home">Home</a></li>
+          <li class="nav-item"><a class="nav-link active" href="./humidity.html">Pollution Monitor</a></li>
+          <li class="nav-item"><a class="nav-link active" href="#">Monthly report</a></li>
+          <li class="nav-item"><a class="nav-link active" href="http://rmkec.ac.in/cel/showcontactus.php">Contact us</a></li>
+        </ul>
+      </div>
+    </nav>
+    <main class="mt-3">
+      <h1>R.M.K Green Policy</h1>
+      <ul>
+        <li>RMKEC strives to be a leader among the all the educational institutes
+        in achieving the environmental excellence.</li>
+        <li>We are committed to develop green thinking and green practices into all
+        aspects of daily operations.</li>
+        <li>We aim to reduce waste production by recycling and reusing.</li>
+        <li>We envision a workplace where every process has been “greened”.</li>
+        <li>We aim to establish and follow principles, in conjunction with
+        environmental practices.</li>
+        <li>We aim for moving towards renewable energy from conventional
+        energy.</li>
+      </ul>
+      <button class="btn-primary mb-3" id="main-btn"><a href="./humidity.html">Explore Pollution Monitor</a></button>
+    </main>
+    
     </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="./monthlyReport.js"></script>
   </body>
 </html>
